chore: prepare project for migration to new laptop